bunch of stuff from the todo list