@@ -48,3 +48,12 @@ tasks.register("createReleaseLinux") {
     dependsOn subprojects.jpackage
     finalizedBy makeLinuxPortable, copyDeb
 }
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+}
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+tasks.withType(JavaExec) {
+    jvmArgs += "--enable-preview"
+}
